# formulator_saas

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pytest.ini
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/formulia_api/: ai_audit.py  ai_requirement_parser.py  database.py  excel_import.py  formula_excel_contract.py  formula_excel_template.py  formula_export.py  iso_design.py  iso_excel.py  iso_legacy_import.py  jira_client.py  jira_excel.py  jira_integration.py  jira_oauth.py  local_env.py  main.py  models.py  parameter_order.py  raw_material_import.py  raw_material_master.py  raw_material_snapshot.py  schemas.py  tenant.py
apps/api/src/formulia_api/agents/: __init__.py  deepagents_adapter.py  supervisor.py  tools.py
apps/api/tests/: test_ai_requirement_parser.py  test_ai_supervisor.py  test_api_foundation.py  test_excel_import.py  test_formula_excel_template.py  test_iso_design.py  test_jira_client.py  test_jira_integration.py  test_jira_oauth.py  test_raw_material_sap_import.py  test_supabase_auth_invitations.py
apps/web/: Dockerfile  README.md  next.config.ts  package.json  proxy.ts  tsconfig.json
docs/: README.md  manifest.md  start_here.md
docs/04-ai/: rag.md  (+9 more)
scripts/: backfill_iso_f1001_from_jira.py  backfill_zero_parameter_values.py  check_frontend_api_boundaries.py  configure_iso_tenant.py  dev-api.ps1  import_raw_materials_csv.py  invite_tenant_user.py  legacy_formula_parity.py  repair_iso_2026_project_ids.py  set-jira-oauth-env.ps1  set-openai-api-key.ps1  verify_raw_materials_e2e.mjs
(+337 files in other folders)
