[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "formulia-api"
version = "0.1.0"
description = "FastAPI backend for FormulIA Cloud"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "python-multipart>=0.0.20,<1",
  "sqlmodel>=0.0.22,<0.1",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
agents = [
  "deepagents>=0.6,<1",
  "langchain-openai>=1.2,<2"
]

[tool.setuptools.packages.find]
where = ["src"]
